Chec Out page left end

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <h1>Exclusive</h1>
                         <ul class="header__botton--wrapper--titl">
                             <li class="header__botton--wrapper--titl--list">
-                                <a href="#" class="header__botton--wrapper--titl--list-link">Home</a>
+                                <a href="#" class="header__botton--wrapper--titl--list-link click">Home</a>
                             </li>
                             <li class="header__botton--wrapper--titl--list">
                                 <a href="#" class="header__botton--wrapper--titl--list-link">Contact</a>
