--- a/pages/cart-page/index.html
+++ b/pages/cart-page/index.html
@@ -237,8 +237,8 @@
                         <p>$1100</p>
                     </div>
                     <div class="cart__main--wrapper--btn">
-                        <button>Update Cart</button>
                         <button>Return To Shop</button>
+                        <button>Update Cart</button>
                     </div>
                     <div class="cart__main--wrapper--card4">
                         <div class="cart__main--wrapper--card4--left">
@@ -259,14 +259,13 @@
                                 <span>Total:</span>
                                 <span>$1750</span>
                             </p>
-                            <a href="#"><button>Procees to checkout</button></a>
+                            <a href="../chec-out/"><button>Procees to checkout</button></a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <!-- Section cart main end -->
-
     </main>
     <!-- main end -->
     <!-- footer start -->
