Accaunt page end

--- a/pages/accaunt/index.html
+++ b/pages/accaunt/index.html
@@ -91,7 +91,7 @@
                                     </a>
                                 </div>
                                 <div class="header__botton--wrapper--right--icons--icon3">
-                                    <a href="../accaunt/">
+                                    <a href="./index.html">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 32 32" fill="none">
                                             <path
@@ -117,7 +117,7 @@
                                                     stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round"
                                                     stroke-linejoin="round" />
                                             </svg>
-                                            <a href="../accaunt/">Manage My Account</a>
+                                            <a href="./index.html">Manage My Account</a>
                                         </li>
                                         <li class="header__botton--wrapper--right--icons--icon3--titil--list">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
@@ -190,131 +190,82 @@
                             <a href="../../index.html">Home</a>
                             <span>/</span>
                         </p>
-                        <p>
-                            <a href="#">My Account</a>
-                            <span>/</span>
-                        </p>
-                        <p>
-                            <a href="#">Product</a>
-                            <span>/</span>
-                        </p>
-                        <p>
-                            <a href="#">View Cart</a>
-                            <span>/</span>
-                        </p>
                         <h4>
-                            <a href="./index.html">CheckOut</a>
+                            <a href="./index.html">Cart</a>
                         </h4>
                     </div>
+                    <p>Welcome!<span class="md">Md Rimel</span></p>
                 </div>
             </div>
         </section>
         <!-- Section cart intro end -->
-        <!-- Section checout intro start -->
-        <section id="checout__intro">
+        <!-- Section accaunt main start -->
+        <sectio id="accaunt__main">
             <div class="container">
-                <div class="checout__intro--wrzpper">
-                    <form action="https://echo.htmlacademy.ru/" class="checout__intro--wrzpper--form">
-                        <div class="checout__intro--wrzpper--form--left">
-                            <h2>Billing Details</h2>
-                            <label for="First Name">
-                                <p>First Name</p>
-                                <input type="text" id="First Name" name="First Name">
-                            </label>
-                            <label for="Company Name">
-                                <p>Company Name</p>
-                                <input type="text" id="Company Name" name="Company Name">
-                            </label>
-                            <label for="Street Address">
-                                <p>Street Address</p>
-                                <input type="text" id="Street Address" name="Street Address">
-                            </label>
-                            <label for="Apartment">
-                                <p>Apartment, floor, etc. (optional)</p>
-                                <input type="text" id="Apartment" name="Apartment">
-                            </label>
-                            <label for="Town">
-                                <p>Town/City</p>
-                                <input type="text" id="Town" name="Town">
-                            </label>
-                            <label for="Phone Number">
-                                <p>Phone Number</p>
-                                <input type="text" id="Phone Number" name="Phone Number">
-                            </label>
-                            <label for="Email">
-                                <p>Email Address</p>
-                                <input type="email" id="Email" name="Email">
-                            </label>
-                            <p>
-                                <input type="checkbox">
-                                Save this information for faster check-out next time
-                            </p>
-                        </div>
-                        <div class="checout__intro--wrzpper--form--right">
-                            <ul class="checout__intro--wrzpper--form--right--itim">
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>
-                                        <img src="../../assets/imegs/cart-img2.png" alt="img">
-                                        LCD Monitor
-                                    </p>
-                                    <p>$650</p>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>
-                                        <img src="../../assets/imegs/cart-img1.png" alt="img">
-                                        H1 Gamepad
-                                    </p>
-                                    <p>$1100</p>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>Subtotal:</p>
-                                    <p>$1750</p>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>Shipping:</p>
-                                    <p>Free</p>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>Total:</p>
-                                    <p>$1750</p>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>
-                                        <input type="radio" class="radio">
-                                        Bank
-                                    </p>
-                                    <div>
-                                        <img src="../../assets/imegs/checout-img1.png" alt="banc-logo">
-                                        <img src="../../assets/imegs/checout-img2.png" alt="banc-logo">
-                                        <img src="../../assets/imegs/checout-img3.png" alt="banc-logo">
-                                        <img src="../../assets/imegs/checout-img4.png" alt="banc-logo">
-                                    </div>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>
-                                        <input type="radio" class="radio">
-                                        Cash on delivery
-                                    </p>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <p>
-                                        <input type="text" placeholder="Coupon Code">
-                                        <button>Apply Coupon</button>
-                                    </p>
-                                </li>
-                                <li class="checout__intro--wrzpper--form--right--itim--list">
-                                    <button type="submit">Place Order</button>
-                                </li>
-                            </ul>
-                        </div>
-                    </form>
+                <div class="accaunt__main--wrapper">
+                    <div class="accaunt__main--wrapper--left">
+                        <ul>
+                            <li>
+                                <h2>Manage My Account</h2>
+                                <p class="activ">My Profile</p>
+                                <p>Address Book</p>
+                                <p>My Payment Options</p>
+                            </li>
+                            <li>
+                                <h2>My Orders</h2>
+                                <p>My Returns</p>
+                                <p>My Cancellations</p>
+                            </li>
+                            <li>
+                                <h2>My WishList</h2>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="accaunt__main--wrapper--right">
+                        <form action="https://echo.htmlacademy.ru/" class="accaunt__main--wrapper--right--form">
+                            <h2>Edit Your Profile</h2>
+                            <div class="accaunt__main--wrapper--right--form--top">
+                                <div class="accaunt__main--wrapper--right--form--top--left">
+                                    <label for="First Name">
+                                        <p>First Name</p>
+                                        <input type="text" id="First Name" name="First Name" placeholder="Md">
+                                    </label>
+                                    <label for="Email">
+                                        <p>Email</p>
+                                        <input type="email" id="Email" name="Email" placeholder="rimel1111@gmail.com">
+                                    </label> 
+                                </div>
+                                <div class="accaunt__main--wrapper--right--form--top--right">
+                                    <label for="Last Name">
+                                        <p>Last Name</p>
+                                        <input type="text" id="Last Name" name="Last Name" placeholder="Rimel">
+                                    </label>
+                                    <label for="Address">
+                                        <p>Address</p>
+                                        <input type="text" id="Address" name="Address" placeholder="Kingston, 5236, United State">
+                                    </label>
+                                </div>
+                            </div>
+                            <div class="accaunt__main--wrapper--right--form--botton">
+                                <label for="Password Changes">
+                                    <p>Password Changes</p>
+                                    <input type="text" id="Password Changes" name="Password Changes" placeholder="Current Passwod">
+                                    <input type="text" id="Password Changes" name="Password Changes" placeholder="New Passwod">
+                                    <input type="text" id="Password Changes" name="Password Changes" placeholder="Confirm New Passwod">
+                                </label>
+                            </div>
+                            <div class="accaunt__main--wrapper--right--form--btn">
+                               <p>Cancel</p>
+                               <button type="submit">Save Changes</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
             </div>
-
-        </section>
-        <!-- Section checout intro end -->
+            </section>
+            <!-- Section accaunt main end -->
     </main>
-    <!-- main end  -->
+    <!--main end  -->
     <!-- footer start -->
     <footer>
         <div class="container">
