--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                     </a>
                                 </div>
                                 <div class="header__botton--wrapper--right--icons--icon3">
-                                    <a href="#">
+                                    <a href="./pages/accaunt/">
                                         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
                                             viewBox="0 0 32 32" fill="none">
                                             <path
@@ -119,7 +119,7 @@
                                                     stroke="#FAFAFA" stroke-width="1.5" stroke-linecap="round"
                                                     stroke-linejoin="round" />
                                             </svg>
-                                            <a href="#">Manage My Account</a>
+                                            <a href="./pages/accaunt/">Manage My Account</a>
                                         </li>
                                         <li class="header__botton--wrapper--right--icons--icon3--titil--list">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
